--- a/app/src/main/res/layout/fragment_moi.xml
+++ b/app/src/main/res/layout/fragment_moi.xml
@@ -1,17 +1,266 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ws.wolfsoft.shoeshappiness.MoiFragment">
+    tools:context="ws.wolfsoft.shoeshappiness.MoiFragment"
+    android:background="@color/Gris_page_moi">
+
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
+        android:id="@+id/linear_profile"
+        android:layout_width="match_parent"
+        android:layout_height="92dp"
+        android:background="@color/White">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image"
+            android:layout_width="74dp"
+            android:layout_height="74dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="7dp"
+            android:src="@drawable/default_avatar" />
+
+        <ProgressBar
+            android:id="@+id/progressBar_pp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="-58dp"
+            android:layout_marginTop="25dp" />
+
+
+        <TextView
+            android:id="@+id/display_name"
+            android:layout_width="205dp"
+            android:layout_height="28dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:text="Display Name"
+            android:textAlignment="center"
+            android:textColor="@color/navigationBarColor"
+            android:textSize="19dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/status"
+            android:layout_width="205dp"
+            android:layout_height="46dp"
+            android:layout_marginLeft="-202dp"
+            android:layout_marginTop="34dp"
+            android:text="Hey j'utilise WeMoney"
+            android:textAlignment="center"
+            android:textColor="@color/gris_statut_moi"
+            android:textSize="12dp"
+            android:textStyle="italic" />
+
+        <ImageView
+            android:id="@+id/qrcode"
+            android:layout_width="23dp"
+            android:layout_height="23dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginTop="35dp"
+            android:src="@drawable/codeqr" />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/linear_wallet"
+        android:layout_width="match_parent"
+        android:layout_height="51dp"
+        android:layout_marginTop="120dp"
+        android:background="@color/White">
+
+        <ImageView
+            android:id="@+id/image_wallet"
+            android:layout_width="37dp"
+            android:layout_height="28dp"
+            android:layout_marginLeft="17dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/wallet" />
+
+        <TextView
+            android:id="@+id/mon_porte_monnaie"
+            android:layout_width="290dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="13dp"
+            android:text="Mon porte-monnaie"
+            android:textColor="@color/navigationBarColor"
+            android:textSize="16dp" />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/linear_services"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Mon espace WeMoney"
-        android:textAlignment="center"
-        android:textColor="@color/cardview_dark_background"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+        android:layout_marginTop="200dp"
+        android:background="@color/White">
 
-</FrameLayout>
+       <ImageView
+           android:layout_width="328dp"
+           android:layout_height="wrap_content"
+           android:src="@drawable/ligne_onglet"
+           android:layout_marginTop="49dp"
+           android:layout_marginLeft="17dp" />
+
+        <ImageView
+            android:layout_width="328dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ligne_onglet"
+            android:layout_marginTop="98dp"
+            android:layout_marginLeft="-327dp"/>
+
+        <ImageView
+            android:layout_width="328dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="147dp"
+            android:src="@drawable/ligne_onglet"
+            android:layout_marginLeft="-327dp"
+            />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="196dp"
+            android:src="@drawable/ligne_onglet"
+            android:layout_marginLeft="-327dp"
+            />
+
+        <ImageView
+            android:layout_width="58dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="11dp"
+            android:src="@drawable/gallery"
+            android:layout_marginLeft="-344dp"
+            />
+
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/gift"
+            android:layout_marginTop="62dp"
+            android:layout_marginLeft="-42dp"
+            />
+
+        <ImageView
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:src="@drawable/demandes"
+            android:layout_marginTop="110dp"
+            android:layout_marginLeft="-25dp"
+            />
+
+        <ImageView
+            android:layout_width="44dp"
+            android:layout_height="36dp"
+            android:src="@drawable/logo1n"
+            android:layout_marginTop="154dp"
+            android:layout_marginLeft="-33dp"/>
+
+        <ImageView
+            android:layout_width="29dp"
+            android:layout_height="29dp"
+            android:src="@drawable/iclune"
+            android:layout_marginTop="206dp"
+            android:layout_marginLeft="-37dp"
+            />
+
+        <TextView
+            android:id="@+id/gallerie"
+            android:layout_width="290dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="12dp"
+            android:text="Ma gallerie"
+            android:textColor="@color/navigationBarColor"
+            android:textSize="16dp" />
+
+        <TextView
+            android:id="@+id/cadeaux"
+            android:layout_width="290dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="-290dp"
+            android:layout_marginTop="61dp"
+            android:text="Offres et cadeaux d'ami(e)s"
+            android:textColor="@color/navigationBarColor"
+            android:textSize="16dp" />
+
+        <TextView
+            android:id="@+id/demandes"
+            android:layout_width="245dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="-290dp"
+            android:layout_marginTop="110dp"
+            android:text="Toutes les demandes"
+            android:textColor="@color/navigationBarColor"
+            android:textSize="16dp" />
+
+        <TextView
+            android:id="@+id/services_wemoney"
+            android:layout_width="290dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="-244dp"
+            android:layout_marginTop="157dp"
+            android:text="Services WeMoney"
+            android:textColor="@color/navigationBarColor"
+            android:textSize="16dp" />
+
+
+        <ImageView
+            android:layout_width="328dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="-327dp"
+            android:layout_marginTop="245dp"
+            android:src="@drawable/ligne_onglet"
+            android:visibility="invisible" />
+
+        <Switch
+            android:id="@+id/mode_nuit"
+            android:layout_width="285dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="-290dp"
+            android:layout_marginTop="207dp"
+            android:textColor="@color/navigationBarColor"
+            android:textSize="16sp"
+            android:text="Mode nuit"/>
+
+
+        <Button
+            android:id="@+id/alerte_btn"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginRight="36dp"
+            android:layout_marginTop="109dp"
+            android:background="@drawable/alerte"
+            android:visibility="invisible" />
+
+
+    </LinearLayout>
+
+
+        <com.sgaikar1.autoscrollinglayout.AutoScrollingLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/scrolling_layout"
+            app:img_src="@drawable/wemoney_num"
+            app:scroll_speed="3000"
+            android:layout_marginTop="446dp"
+            app:tint_alpha="0.9"
+            app:tint_color="#228B22">
+
+        </com.sgaikar1.autoscrollinglayout.AutoScrollingLayout>
+
+
+
+
+
+
+
+
+
+
+</RelativeLayout>
